Adjust various spacing issues and tweak paragraph sizes

--- a/ehri-theme/static/scss/styles.scss
+++ b/ehri-theme/static/scss/styles.scss
@@ -17,6 +17,7 @@ $font-size-xs: 0.625rem;
 $font-size-sm: 0.875rem;
 $font-size-md: 1.125rem;
 $font-size-lg: 1.5rem;
+$font-size-xl: 1.75rem;
 $font-size-title: 2rem;
 
 // Font weightings
@@ -149,6 +150,11 @@ a {
   text-decoration: none;
 }
 
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
 @media (max-width: $breakpoint-tablet) {
   h1 {
     font-size: 3.375rem;
@@ -185,6 +191,10 @@ a {
   grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
   grid-gap: $gap;
   width: 100%;
+
+  @media (max-width: $breakpoint-phone) {
+    --auto-grid-min-size: unset;
+  }
 }
 
 
@@ -245,7 +255,7 @@ a {
   color: var(--wine-red);
   border: 2px solid var(--wine-red);
   white-space: nowrap;
-  background-color: var(--white);
+  background-color: transparent;
   font-size: $font-size-md;
   line-height: 1.35rem;
 
@@ -277,7 +287,7 @@ textarea {
 .resource-cards {
   @include auto-grid(24rem, 4rem);
 
-  margin: 3rem 0 0 0;
+  margin: 3rem 0;
   padding: 0;
 }
 
@@ -303,7 +313,8 @@ textarea {
     align-items: start;
     grid-template-columns: auto min-content;
     header {
-      font-size: 1.75rem;
+      font-size: $font-size-xl;
+      line-height: 2.25rem; // larger than spec
       font-family: var(--font-family-headings);
       font-weight: var(--font-weight-bolder);
       grid-area: 1 / 1 / 2 / 2;
@@ -338,18 +349,13 @@ textarea {
       padding: $space-lg;
     }
   }
-
-  @media (max-width: $breakpoint-phone) {
-    // Setting a min size at small widths
-    // causes issues with breaking the box.
-    --auto-grid-min-size: unset;
-  }
 }
 
 .partner-cards {
   display: grid;
   grid-template-rows: 1fr;
   grid-gap: $space-lg;
+  margin: 3rem 0;
 
   .partner-card {
     @include card();
@@ -365,7 +371,8 @@ textarea {
     header {
       grid-area: header;
       h3 {
-        margin: 0;
+        margin-top: 0;
+        margin-bottom: 1rem;
       }
     }
     .info {
@@ -396,10 +403,14 @@ section,
 .page-content
 {
   padding: var(--padding-page-content-v) var(--padding-page-content-h);
-  h1 {
+  h1,
+  h2
+  {
     margin-top: 0;
   }
-  h1:last-child {
+  h1:last-child,
+  h2:last-child
+  {
     margin-bottom: 0;
   }
 
@@ -409,7 +420,7 @@ section,
   }
 
   p.intro {
-    font-size: 1.75rem;
+    font-size: $font-size-xl;
     line-height: 2.25rem;
     font-weight: var(--font-weight-bold);
     font-family: var(--font-family-headings);
@@ -463,7 +474,7 @@ section,
   h1 {
     grid-column: 1 / 3;
     grid-row: 1 / 4;
-    margin: 0;
+    margin: 0 0 1rem 0;
     z-index: 4;
   }
   p {
@@ -563,10 +574,6 @@ section,
   display: flex;
   align-items: center;
   flex-direction: column;
-
-  > p {
-    margin-top: 0;
-  }
 }
 
 .home.latest {
@@ -596,7 +603,8 @@ section,
     align-items: start;
     header {
       font-family: var(--font-family-headings);
-      font-size: 1.75rem;
+      font-size: $font-size-xl;
+      line-height: 2.25rem;
       font-weight: var(--font-weight-bolder);
     }
 
@@ -615,7 +623,7 @@ section,
 // region About page sections
 .people {
   .person-list {
-    margin: 0;
+    margin: 0 0 var(--margin-section-v) 0;
     padding: 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -647,6 +655,7 @@ section,
 // region Contact page
 .contact-info {
   @include auto-grid(340px, 4rem);
+  margin-bottom: var(--margin-section-v);
 
   .form {
     // Hide labels
@@ -694,6 +703,10 @@ section,
 // region Services page
 
 .services.page-content {
+  .resource-cards {
+    margin-bottom: var(--margin-section-v);
+  }
+
   @media (min-width: $breakpoint-phone) {
     .resource-cards {
       grid-template-rows: 1fr;
